# NatalAIBot

./: README.md  example.env  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-08-bot-rewrite.md
docs/superpowers/specs/: 2026-06-08-bot-rewrite-design.md
natalaibot/: __init__.py  backend_client.py  bot.py  config.py  geo_extractor.py  models.py  payment.py
natalaibot/handlers/: generation.py  persons.py  start.py
natalaibot/http/: backend_client.py  users_client.py
natalaibot/infra/: formatting.py
natalaibot/keyboards/: generation.py  persons.py  start.py
natalaibot/routers/: generation.py  user.py
tests/: test_backend_client.py  test_bot_generation.py  test_formatting.py  test_handlers_generation.py  test_handlers_start_persons.py  test_keyboards.py  test_models_config.py  test_users_client.py
